--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,8 +1,8 @@
 .container {
+  margin: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  width: 1024px;
 }
 
 .title {
