--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,6 +1,6 @@
 .container {
+  margin: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  width: 1024px;
 }
