nhr1: adding dropdown element that allow to filter employees list to display by number

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,8 +5,9 @@
   width: 1024px;
 }
 
-.title {
+.content {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
